[package]
name = "socksproxy"
version = "0.1.0"
description = "Socks Proxy Server"
repository = "https://github.com/geekvikas/socksproxy"
readme = "README.md"
authors = ["geekvikas"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true

[dependencies]
clap = { version = "4.0.4", features = ["derive"] }
csv = "1.1.6"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.6.0"
serde = "1.0.145"
serde_derive = "1.0.145"
snafu = "0.7.1"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
substring = "1.4.5"
actix-web = "4.2.1"
futures = "0.3.24"